// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostAttachmentsAudios - Snapshots > matches snapshot with different audio formats 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/song.mp3"
  />
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/track.ogg"
  />
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/sound.wav"
  />
</div>
`;

exports[`PostAttachmentsAudios - Snapshots > matches snapshot with empty audios array 1`] = `
<div
  class="gap-3"
  data-testid="container"
/>
`;

exports[`PostAttachmentsAudios - Snapshots > matches snapshot with multiple audios 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/audio1.mp3"
  />
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/audio2.mp3"
  />
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/audio3.mp3"
  />
</div>
`;

exports[`PostAttachmentsAudios - Snapshots > matches snapshot with single audio 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <audio
    class="cursor-auto"
    controls=""
    data-testid="audio"
    src="https://example.com/audio.mp3"
  />
</div>
`;
